unpackaged/main/default/objects/TRG_TriggerSettings__c/TRG_TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used to enable or disable all triggers/specific triggers for a given user/profile</description>
    <label>Trigger Settings</label>
</CustomObject>