unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/CheckEnabledOnLeanLoad__c.field-meta.xml
<CustomField>
        <fullName>CheckEnabledOnLeanLoad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckEnabledOnLeanLoad</label>
        <type>Checkbox</type>
    </CustomField>