unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/DisableAllProcessBuilders__c.field-meta.xml
<CustomField>
        <fullName>DisableAllProcessBuilders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, all process builders managed by the Trigger Framework are skipped for all objects</description>
        <inlineHelpText>if true, all process builders managed by the Trigger Framework are skipped for all objects</inlineHelpText>
        <label>DisableAllProcessBuilders</label>
        <type>Checkbox</type>
    </CustomField>