unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/DisableAllTriggers__c.field-meta.xml
<CustomField>
        <fullName>DisableAllTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, all triggers managed by the Trigger Framework are skipped for all objects</description>
        <inlineHelpText>If true, all triggers managed by the Trigger Framework are skipped for all objects</inlineHelpText>
        <label>DisableAllTriggers</label>
        <type>Checkbox</type>
    </CustomField>