unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/DisableAllWorkflows__c.field-meta.xml
<CustomField>
        <fullName>DisableAllWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, all workflows managed by the Trigger Framework are skipped for all objects</description>
        <inlineHelpText>If true, all workflows managed by the Trigger Framework are skipped for all objects</inlineHelpText>
        <label>DisableAllWorkflows</label>
        <type>Checkbox</type>
    </CustomField>