unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/DisableTriggerMethods__c.field-meta.xml
<CustomField>
        <fullName>DisableTriggerMethods__c</fullName>
        <description>List of newline separated fully specified class names of classes extending TriggerHandlerInterface to skip during execution</description>
        <inlineHelpText>List of newline separated fully specified class names of classes extending TriggerHandlerInterface to skip during execution</inlineHelpText>
        <label>DisableTriggerMethods</label>
        <type>TextArea</type>
    </CustomField>