unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/DisableTriggerObjects__c.field-meta.xml
<CustomField>
        <fullName>DisableTriggerObjects__c</fullName>
        <description>List of newline separated fully specified object names to skip during trigger execution</description>
        <inlineHelpText>List of newline separated fully specified object names to skip during trigger execution</inlineHelpText>
        <label>DisableTriggerObjects</label>
        <type>TextArea</type>
    </CustomField>