unpackaged/main/default/objects/TRG_TriggerSettings__c/fields/PrintLimitsInDebug__c.field-meta.xml
<CustomField>
        <fullName>PrintLimitsInDebug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, print limits in debug</description>
        <inlineHelpText>If true, print limits in debug</inlineHelpText>
        <label>PrintLimitsInDebug</label>
        <type>Checkbox</type>
    </CustomField>